# pdca-langgraph-sop

./: .env.example  .gitignore  ANSWER.md  CLAUDE.md  FAQ.md  QUICKSTART.md  README.md  demo_extraction.py  main.py  pyproject.toml  requirements.txt  run.py  run_pdca.py  run_pdca_with_memory.py
.claude/skills/prompt-to-langgraph/: SKILL.md
config/extractions/: wf_data_analysis.json  wf_ecu_signal_test_gen.json
doc/: extraction_explained.md  extraction_simple.md  prompt_content2langgraph.md  test_extraction_simple.py
doc/plans/: 2026-04-21-llm-extraction-design.md
docs/plans/: 2026-04-22-pdca-refactor-design.md
examples/: README.md  demo_load_and_generate.py  demo_run_workflow.py  input.md  test_llm_refactor.py  validate_llm_refactor.py
output/: index.yaml
output/001_auto_ECU信号一致性测试参数生成_v1.0.0/: evaluation_report.json  main.py  optimization_proposals.json  review_result.json
output/001_auto_ECU信号一致性测试参数生成_v1.0.0/config/: sample_input.json  workflow.json  workflow_metadata.json
output/001_auto_ECU信号一致性测试参数生成_v1.0.0/nodes/: workflow_graph.py
pdca/: __init__.py
pdca/act/: loop_controller.py  reviewer.py
pdca/check/: evaluator.py
pdca/core/: component_library.py  config.py  llm.py  logger.py  memory.py  prompts.py  utils.py
pdca/do_/: code_generator.py  workflow_runner.py
pdca/plan/: config_generator.py  extractor.py
tests/: test_code_generator.py  test_component_library.py  test_config.py  test_config_generator.py  test_evaluator.py  test_extractor.py  test_llm_connection.py  test_loop_controller.py  test_reviewer.py
(+46 files in other folders)
